--- a/menu.css
+++ b/menu.css
@@ -1,3 +1,15 @@
+body {
+  margin: 0;
+  font-size: 28px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.header {
+  background-color: #f1f1f1;
+  padding: 30px;
+  text-align: center;
+}
+
 #navbar {
     overflow: hidden;
     background-color: #000;
@@ -10,6 +22,16 @@
     text-align: center;
     padding: 14px;
     text-decoration: none;
+  }
+
+  #navbar a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+
+  #navbar a.active {
+    background-color: #04AA6D;
+    color: white;
   }
 
 .content {
